fix: reset sidebar collapse state on mobile

--- a/src/app/shared/components/sidebar/sidebar.component.css
+++ b/src/app/shared/components/sidebar/sidebar.component.css
@@ -10,11 +10,15 @@
 
 @media (max-width: 767px) {
   .sidebar {
+    width: 256px;
     transform: translateX(-100%);
-    transition: transform .3s;
   }
 
   .sidebar.mobile-open {
     transform: translateX(0);
+  }
+
+  .sidebar.collapsed {
+    width: 256px;
   }
 }
